Added flexible patch update
